--- a/app/src/main/res/layout/fragment_item_list2.xml
+++ b/app/src/main/res/layout/fragment_item_list2.xml
@@ -4,10 +4,12 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/list"
     android:name="com.example.detailapplication.ItemFragment"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:layout_marginLeft="16dp"
-    android:layout_marginRight="16dp"
+    android:layout_width="wrap_content"
+    android:layout_height="wrap_content"
     app:layoutManager="LinearLayoutManager"
     tools:context=".ItemFragment"
-    tools:listitem="@layout/fragment_first" />
+    tools:listitem="@layout/fragment_first"
+    />
+
+
+
