--- a/app/src/main/res/layout/activity_imam_finder_page.xml
+++ b/app/src/main/res/layout/activity_imam_finder_page.xml
@@ -12,10 +12,9 @@
         android:layout_height="128dp"
         android:layout_marginTop="93dp"
         android:layout_marginEnd="16dp"
-        android:layout_marginRight="16dp"
         android:text="ImamFinder"
         android:textAlignment="center"
-        android:textSize="40dp"
+        android:textSize="40sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         android:gravity="center_horizontal" />
