--- a/app/src/main/res/layout/item_user.xml
+++ b/app/src/main/res/layout/item_user.xml
@@ -13,12 +13,12 @@
         <TextView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="name"
+            android:text="@string/imam_name"
             android:id="@+id/name"/>
         <TextView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="phone"
+            android:text="@string/imam_phone"
             android:id="@+id/phone"/>
     </LinearLayout>
     <View
