--- a/app/src/main/res/layout/contact_list_item.xml
+++ b/app/src/main/res/layout/contact_list_item.xml
@@ -12,7 +12,7 @@
         android:id="@+id/GfG_logo"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        app:srcCompat="@drawable/ic_baseline_record_voice_over_24" />
+        app:srcCompat="@drawable/mask_starfish" />
 
     <TextView
         android:id="@+id/txt_name"
