Fixed hardcoded values!

--- a/app/src/main/res/layout/contact_list_item.xml
+++ b/app/src/main/res/layout/contact_list_item.xml
@@ -12,10 +12,9 @@
         android:id="@+id/textView4"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="Hiring" />
+        android:text="@string/hiring" />
 
     <de.hdodenhof.circleimageview.CircleImageView
-        xmlns:app="http://schemas.android.com/apk/res-auto"
         android:id="@+id/profile_image"
         android:layout_width="96dp"
         android:layout_height="96dp"
@@ -26,9 +25,11 @@
 
     <ImageView
         android:id="@+id/GfG_logo"
+
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        app:srcCompat="@drawable/mask_starfish" />
+        app:srcCompat="@drawable/mask_starfish"
+        android:contentDescription="@string/todo" />
 
     <TextView
         android:id="@+id/txt_name"
