--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -9,8 +9,9 @@
 
     <EditText
         android:id="@+id/editTextTextPersonEmail"
-        android:layout_width="411dp"
+        android:layout_width="0dp"
         android:layout_height="57dp"
+        android:layout_marginBottom="278dp"
         android:background="@color/black"
         android:ems="10"
         android:hint="@string/enter_your_email"
@@ -18,13 +19,14 @@
         android:minHeight="48dp"
         android:text="@string/email"
         android:textColor="@color/white"
-        tools:layout_editor_absoluteX="3dp"
-        tools:layout_editor_absoluteY="396dp" />
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent" />
 
     <EditText
         android:id="@+id/editTextTextPersonName"
-        android:layout_width="411dp"
-        android:layout_height="56dp"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
         android:background="@color/black"
         android:ems="10"
         android:hint="@string/your_name"
@@ -32,79 +34,102 @@
         android:minHeight="48dp"
         android:text="@string/full_name"
         android:textColor="@color/white"
-        tools:layout_editor_absoluteX="0dp"
-        tools:layout_editor_absoluteY="489dp" />
+        app:layout_constraintBottom_toTopOf="@+id/textViewUserName"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/textViewPhoneNumber" />
 
     <TextView
         android:id="@+id/textViewTitle"
         android:layout_width="wrap_content"
         android:layout_height="104dp"
         android:text="@string/imamfinder"
-        android:textSize="40sp" />
+        android:textSize="40sp"
+        app:layout_constraintEnd_toStartOf="@+id/textViewRegistration"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
 
     <TextView
         android:id="@+id/textViewRegistration"
-        android:layout_width="80dp"
+        android:layout_width="0dp"
         android:layout_height="50dp"
+        android:layout_marginEnd="117dp"
         android:inputType="none"
         android:text="@string/create_your_account"
         android:textColor="@color/white"
-        tools:layout_editor_absoluteX="214dp"
-        tools:layout_editor_absoluteY="0dp" />
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toEndOf="@+id/textViewTitle"
+        app:layout_constraintTop_toTopOf="@+id/textViewTitle" />
 
     <TextView
         android:id="@+id/textViewPhoneNumber"
-        android:layout_width="411dp"
+        android:layout_width="0dp"
         android:layout_height="39dp"
+        android:layout_marginTop="54dp"
+        android:layout_marginBottom="56dp"
         android:background="@color/black"
         android:text="@string/phone_number"
         android:textColor="@color/white"
         android:textSize="20sp"
-        tools:layout_editor_absoluteX="3dp"
-        tools:layout_editor_absoluteY="450dp" />
+        app:layout_constraintBottom_toTopOf="@+id/textViewUserName"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="@+id/editTextTextPersonEmail" />
 
     <TextView
         android:id="@+id/textViewUserName"
-        android:layout_width="416dp"
+        android:layout_width="0dp"
         android:layout_height="41dp"
+        android:layout_marginTop="92dp"
+        android:layout_marginBottom="93dp"
         android:background="@color/black"
         android:text="@string/user_name"
         android:textColor="@color/white"
         android:textSize="20sp"
-        tools:layout_editor_absoluteX="0dp"
-        tools:layout_editor_absoluteY="545dp" />
+        app:layout_constraintBottom_toTopOf="@+id/Register"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/editTextTextPersonEmail" />
 
     <TextView
         android:id="@+id/textViewPassword"
-        android:layout_width="420dp"
+        android:layout_width="0dp"
         android:layout_height="56dp"
+        android:layout_marginTop="89dp"
+        android:layout_marginBottom="97dp"
         android:background="@color/black"
         android:text="@string/password"
         android:textColor="@color/white"
         android:textSize="20sp"
-        tools:layout_editor_absoluteX="0dp"
-        tools:layout_editor_absoluteY="578dp" />
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="@+id/editTextTextPersonName" />
 
     <Button
         android:id="@+id/Register"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginBottom="4dp"
+        android:onClick="onClick"
         android:text="@string/register"
         android:textSize="10sp"
-        tools:ignore="MissingConstraints"
-        tools:layout_editor_absoluteX="0dp"
-        tools:layout_editor_absoluteY="679dp" />
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        tools:ignore="MissingConstraints" />
 
     <Button
         android:id="@+id/buttonAlreadySignIn"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginEnd="5dp"
+        android:layout_marginBottom="4dp"
         android:text="@string/already_have_an_account"
         android:textSize="10sp"
-        tools:ignore="MissingConstraints"
-        tools:layout_editor_absoluteX="214dp"
-        tools:layout_editor_absoluteY="679dp" />
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        tools:ignore="MissingConstraints" />
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
