Fixed sign in activity

--- a/app/src/main/res/layout/contact_list_item.xml
+++ b/app/src/main/res/layout/contact_list_item.xml
@@ -14,6 +14,13 @@
         android:layout_height="wrap_content"
         android:text="@string/hiring" />
 
+    <com.google.android.gms.common.SignInButton
+        android:id="@+id/buttonSignIn"
+        android:onClick="signOn"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="@string/sign_in_with_google" />
+
     <de.hdodenhof.circleimageview.CircleImageView
         android:id="@+id/profile_image"
         android:layout_width="96dp"
@@ -25,7 +32,6 @@
 
     <ImageView
         android:id="@+id/GfG_logo"
-
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         app:srcCompat="@drawable/mask_starfish"
