--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -99,6 +99,13 @@
         app:layout_constraintTop_toTopOf="parent"
         tools:srcCompat="@tools:sample/avatars" />
 
+    <com.google.android.gms.common.SignInButton
+        android:id="@+id/buttonSignIn"
+        android:onClick="signOn"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="@string/sign_in_with_google" />
+
     <Button
         android:id="@+id/Bregister"
         android:layout_width="wrap_content"
