--- a/app/src/main/res/layout/chat.xml
+++ b/app/src/main/res/layout/chat.xml
@@ -1,8 +1,46 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:background="@color/back_color"
+    xmlns:app="http://schemas.android.com/apk/res-auto">
+
+    <androidx.recyclerview.widget.RecyclerView
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:id="@+id/idRVChats"
+        android:layout_above="@id/idRLMsg"
+        />
+
+    <RelativeLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_alignParentBottom="true"
+        android:id="@+id/idRLMsg"
+        />
+
+        <EditText
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:hint="@string/enter_message"
+            android:textColorHint="@color/white"
+            android:id="@+id/idEdtMessage"
+            android:textColor="@color/white"
+            android:singleLine="true"
+            />
+
+    <com.google.android.material.floatingactionbutton.FloatingActionButton
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentEnd="true"
+        android:id="@+id/idFABSend"
+        android:src="@drawable/ic_send"
+        app:fabCustomSize="45dp"
+        app:backgroundTint="@color/white"
+        android:backgroundTint="@color/fab_color"
+        android:layout_margin="4dp"
+        android:layout_alignParentRight="true"
+        />
 
     <!--
     <io.getstream.chat.android.ui.channel.list.ChannelListView
@@ -15,4 +53,4 @@
     app:layout_constraintTop_toTopOf="parent" />
     -->
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+</RelativeLayout>
