--- a/app/src/main/res/layout/chat.xml
+++ b/app/src/main/res/layout/chat.xml
@@ -25,6 +25,9 @@
             android:hint="@string/enter_message"
             android:textColorHint="@color/white"
             android:id="@+id/idEdtMessage"
+            android:layout_margin="3dp"
+            android:layout_centerInParent="true"
+            android:layout_toLeftOf="@id/idFABSend"
             android:textColor="@color/white"
             android:singleLine="true"
             />
