--- a/app/src/main/res/layout/bot_msg_rv_item.xml
+++ b/app/src/main/res/layout/bot_msg_rv_item.xml
@@ -1,13 +1,37 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="wrap_content"
-    android:layout_height="wrap_content"
+<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:layout_gravity="start"
+    android:layout_gravity="end"
     android:layout_margin="5dp"
+    app:cardBackgroundColor="@color/user_back_color"
     android:elevation="8dp"
-    app:cardBackgroundColor="@color/bot_back_color"
     app:cardCornerRadius="8dp"
     >
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+    <LinearLayout
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"/>
+
+        <ImageView
+            android:layout_width="30dp"
+            android:layout_height="30dp"
+            android:layout_margin="10dp"
+            android:src="@drawable/ic_chatbot" />
+
+        <TextView
+            android:id="@+id/idTVBot"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_margin="5dp"
+            android:padding="3dp"
+            android:layout_gravity="center"
+            android:text="@string/bot_message"
+            android:textColor="@color/white"
+            />
+
+    />
+
+</androidx.cardview.widget.CardView>
