--- a/app/src/main/res/layout/user_msg_rv_item.xml
+++ b/app/src/main/res/layout/user_msg_rv_item.xml
@@ -20,7 +20,7 @@
         android:layout_height="wrap_content"
         android:text="@string/user_message"
         android:id="@+id/idTVUser"
-        android:textColor="@color/white"
+        android:textColor="@color/black"
         android:layout_margin="5dp"
         android:padding="3dp"
         android:layout_gravity="center"
