--- a/app/src/main/res/layout/chat.xml
+++ b/app/src/main/res/layout/chat.xml
@@ -2,7 +2,9 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    xmlns:tools="http://schemas.android.com/tools"
     android:background="@color/back_color"
+    tools:context=".activity.HomeActivity"
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <androidx.recyclerview.widget.RecyclerView
@@ -12,12 +14,13 @@
         android:layout_above="@id/idRLMsg"
         />
 
-    <RelativeLayout
+    <LinearLayout
+        android:weightSum="5"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
         android:id="@+id/idRLMsg"
-        />
+        android:orientation="horizontal" />
 
         <EditText
             android:layout_width="match_parent"
