--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -9,4 +9,5 @@
     <dimen name="container_margin">8dp</dimen>
     <dimen name="list_item_height">200dp</dimen>
     <dimen name="margin_medium">20dp</dimen>
+    <dimen name="activity_vertical_margin">10dp</dimen>
 </resources>
