--- a/app/src/main/res/xml/network_security_config.xml
+++ b/app/src/main/res/xml/network_security_config.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <network-security-config>
     <domain-config cleartextTrafficPermitted="true">
-        <domain includeSubdomains="true">your_site_domain.com</domain>
+        <domain includeSubdomains="true">
+            http://api.brainshop.ai/get?bid=162882</domain>
     </domain-config>
 </network-security-config>
